2013-03-27  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.3.0-rc2 Released.

	* app_confbridge: Fix error messages on exiting conference.
	
	  A marked user ending a conference with only end_marked users
	  generates error messages:
	  ERROR[0000][C-00000000]: confbridge/conf_state.c:47
	  conf_invalid_event_fn: Invalid event for confbridge user ''

	  The MULTI_MARKED state was doing too much when it was kicking out
	  the end_marked users from the conference.  The kicked out users
	  will clean up after themselves when they exit the conference.

	* app_page and app_confbridge: Fix custom announcement on entering
	conference.

	  The Page and ConfBridge custom announcement did not play when users
	  entered the conference.

	  Fix the CONFBRIDGE(user,announcement) file not getting played. The
	  code to do this got removed accidentally when the ConfBridge code
	  was restructured to be more state machine like.

	  Fixed play_prompt_to_user() doxygen comments.

	  Fixed the Page A(x) and n options for the caller.  The caller never
	  played the announcement file and totally ignored the n option.  The
	  code to do this was lost when the application was converted to use
	  ConfBridge.

	  Factored out setup_profile_bridge(), setup_profile_paged(), and
	  setup_profile_caller() routines to setup ConfBridge profiles. Made
	  each profile setup routine use the default template if one has not
	  already been setup by dialplan.

	* app_confbridge: Fix crash from receiving an AMI action after
	ConfBridge unloaded.

	  Unloading ConfBridge caused the next AMI action received to crash
	  Asterisk. Add the missing unregister of AMI action
	  ConfbridgeSetSingleVideoSrc when ConfBridge is unloaded.

	* Fixed Confbridge file recording deadlock and appending.

	  A deadlock occurred after starting/stopping and then restarting a
	  confbridge recording.  Upon starting a recording a record thread is